src/snapshots/jj_pr__tests__sync@remade-pr-both-branches-exist.json.gz.snap
---
source: src/tests.rs
assertion_line: 129
expression: plan_sync(&f)
input_file: src/fixtures/remade-pr-both-branches-exist.json.gz
---
stamp #2812 trailer on luuklzktmzky
push: #2812 (mingwei/delete-subgraph-id)
