src/snapshots/jj_pr__tests__sync@remade-pr-new-pr-created.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/remade-pr-new-pr-created.json.gz
---
stamp #2812 trailer on luuklzktmzky
push: #2812 (mingwei/delete-subgraph-id)
update #2844 (mingwei/push-fold) title -> "feat(dfir_pipes): add push-side `Fold`, `Reduce`, and `Sort` operators"
