src/snapshots/jj_pr__tests__sync_updates_description_single_commit.snap
---
source: src/tests.rs
assertion_line: 1098
expression: plan_sync(&f)
---
update #1 (feat) title -> "new title"
