src/snapshots/jj_pr__tests__sync_updates_description_single_commit_on_push.snap
---
source: src/tests.rs
assertion_line: 1085
expression: plan_sync(&f)
---
push: #1 (feat)
  update #1 title -> "new title"
